# timberline

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  SAAS_DEPLOYMENT_ROADMAP.md  SPEC.md  docker-compose.yaml  kind-cluster.yaml  pytest.ini  requirements-test.txt
.github/: copilot-instructions.md
.github/workflows/: build-and-publish.yml  build-log-ingestor.yml
ai-analyzer/: CHANGELOG.md  CLAUDE.md  Dockerfile  SPEC.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  start-api.sh  start_server.py
ai-analyzer/.github/workflows/: release.yml
ai-analyzer/alembic/: env.py
ai-analyzer/alembic/versions/: 5293afbbe3f1_create_analysis_results_table.py  f1b3296e1dc3_add_analysis_jobs_table.py
ai-analyzer/analyzer/: __init__.py  logging_config.py
ai-analyzer/analyzer/analysis/: engine.py
ai-analyzer/analyzer/api/: __init__.py  main.py  schemas.py
ai-analyzer/analyzer/api/routes/: analyses.py  logs.py
ai-analyzer/analyzer/cli/: main.py
ai-analyzer/analyzer/config/: settings.py
ai-analyzer/analyzer/db/: base.py  models.py
ai-analyzer/analyzer/llm/: client.py
ai-analyzer/analyzer/models/: log.py
ai-analyzer/analyzer/reporting/: generator.py
ai-analyzer/analyzer/storage/: __init__.py  analysis_results_store.py  milvus_client.py
ai-analyzer/tests/: conftest.py  test_analysis.py  test_analysis_results_store.py  test_api_analyses.py  test_api_logs.py  test_config.py  test_llm.py  test_models.py  test_reporting.py  test_storage.py
fluent-bit-config/: fluent-bit.conf  fluent-bit.yaml  parsers.yaml  sampling.lua
helm/timberline/: Chart.yaml  values.yaml
helm/timberline/templates/: _helpers.tpl  ai-analyzer-ingress.yaml  ai-analyzer.yaml  attu-ingress.yaml  attu.yaml  embedding-service.yaml  etcd.yaml  fluent-bit-configmap.yaml  fluent-bit-daemonset.yaml  fluent-bit-rbac.yaml  llm-chat-service.yaml  log-ingestor.yaml  milvus.yaml  minio.yaml  postgresql.yaml  web-ui-ingress.yaml  web-ui.yaml
k8s/: namespace.yaml
k8s/attu/: deployment.yaml
k8s/fluent-bit/: configmap.yaml  daemonset.yaml  rbac.yaml
k8s/llm/: chat-service.yaml  embedding-service.yaml
k8s/log-ingestor/: deployment.yaml
k8s/milvus/: etcd.yaml  milvus.yaml  minio.yaml
log-collector/: .gitignore  Dockerfile  Makefile  README.md  go.mod  go.sum
log-collector/cmd/: main.go
log-collector/internal/collector/: collector.go  collector_test.go
log-collector/internal/config/: config.go  config_test.go
log-collector/internal/forwarder/: forwarder.go  forwarder_test.go
log-collector/internal/k8s/: client.go  client_test.go
log-collector/internal/metrics/: server.go  server_test.go
log-collector/internal/models/: log.go  log_test.go
log-ingestor/: .golangci.yml  CLAUDE.md  Dockerfile  Makefile  README.md  go.mod  go.sum  milvus_api_explore.go
log-ingestor/cmd/: main.go
log-ingestor/internal/config/: config.go  config_test.go
log-ingestor/internal/embedding/: service.go  service_test.go
log-ingestor/internal/handlers/: batch.go  batch_test.go  flexible_timestamp_test.go  health.go  health_test.go  stream.go  stream_fluentbit_test.go  stream_test.go  testing.go
log-ingestor/internal/metrics/: server.go  server_test.go
log-ingestor/internal/models/: log.go  log_test.go
log-ingestor/internal/storage/: milvus.go  milvus_test.go  testing.go
scripts/: docker-compose-up.sh  download-models.sh  generate-test-logs.sh  kind-setup.sh  run-integration-tests.sh  run-kind-integration-tests.sh  start-docker-integration-test.sh  values-kind.yaml
tests/: README.md  __init__.py
tests/docker/: __init__.py  conftest.py  log_generator.py  test_ai_analyzer_api.py  test_ai_analyzer_integration.py  test_embedding_service.py  test_fluent_bit.py  test_helpers.py  test_integration.py  test_log_ingestor.py  test_metrics.py  test_milvus_database.py  test_pipeline.py  test_service_health.py
tests/kind/: README.md  conftest.py  test_ai_analyzer.py  test_e2e_pipeline.py  test_llm_services.py  test_log_ingestor.py  test_milvus_stack.py
volumes/fluent-bit-config/: fluent-bit.conf  parsers.conf
web-ui/: CLAUDE.md  README.md  nginx.conf  package-lock.json  package.json
web-ui/src/: App.tsx  index.css
web-ui/src/components/: AnalysisDashboard.tsx  AnalysisDetails.tsx  CreateAnalysisModal.tsx  Layout.tsx  LogsViewer.tsx
